Bug 92014 - REGRESSION(r123281): childNodes sometimes returns wrong nodes
Summary: REGRESSION(r123281): childNodes sometimes returns wrong nodes
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ryosuke Niwa
URL:
Keywords:
: 91980 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-07-23 11:50 PDT by Ryosuke Niwa
Modified: 2012-07-23 13:42 PDT (History)
4 users (show)

See Also:


Attachments
Fixes the typo (4.17 KB, patch)
2012-07-23 11:56 PDT, Ryosuke Niwa
no flags Details | Formatted Diff | Diff
Move the console output to be below 1-5 and test description (4.21 KB, patch)
2012-07-23 11:59 PDT, Ryosuke Niwa
andersca: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ryosuke Niwa 2012-07-23 11:50:44 PDT
There's a really careless error in DynamicNodeListCacheBase::itemBeforeOrAfter. It's doing

firstNode(forward, rootNode(), previous)

but it should read

firstNode(forward, rootNode(), shouldOnlyIncludeDirectChildren())

instead.
Comment 1 Ryosuke Niwa 2012-07-23 11:56:06 PDT
Created attachment 153825 [details]
Fixes the typo
Comment 2 Ryosuke Niwa 2012-07-23 11:59:16 PDT
Created attachment 153827 [details]
Move the console output to be below 1-5 and test description
Comment 3 Ryosuke Niwa 2012-07-23 12:26:46 PDT
Committed r123359: <http://trac.webkit.org/changeset/123359>
Comment 4 Ryosuke Niwa 2012-07-23 13:41:46 PDT
http://crbug.com/138488
Comment 5 Ryosuke Niwa 2012-07-23 13:42:57 PDT
*** Bug 91980 has been marked as a duplicate of this bug. ***