REGRESSION(r123281): childNodes sometimes returns wrong nodes https://bugs.webkit.org/show_bug.cgi?id=92014

Reviewed by Anders Carlsson.

Source/WebCore:

The bug was caused by a typo in itemBeforeOrAfter. Namely, it should have been calling firstNode as
firstNode(forward, rootNode(), shouldOnlyIncludeDirectChildren()),
NOT firstNode(forward, rootNode(), previous)
as evident from the argument list of the function.

Test: fast/dom/NodeList/childNodes-reverse-iteration.html

* html/HTMLCollection.cpp:
(WebCore::DynamicNodeListCacheBase::itemBeforeOrAfter):

LayoutTests:

Added an integration regression test that caught this bug.

* fast/dom/NodeList/childNodes-reverse-iteration-expected.txt: Added.
* fast/dom/NodeList/childNodes-reverse-iteration.html: Added.


Canonical link: https://commits.webkit.org/109812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123359 268f45cc-cd09-0410-ab3c-d52691b4dbfc